# win32_notif

./: Cargo.toml  README.md  r.rs
.github/workflows/: doc.yml  publish.yml
examples/: bind.rs  expires.rs  lunch.rs  readme.rs  simple.rs
src/: lib.rs  main.old.rs  main.rs
src/structs/: data.rs  mod.rs
src/structs/handler/: activated.rs  dismissed.rs  failed.rs  mod.rs
src/structs/notification/: mod.rs
src/structs/notification/widgets/: audio.rs  commands.rs  header.rs  mod.rs  raw_xml.rs
src/structs/notification/widgets/actions/: action.rs  input.rs
src/structs/notification/widgets/group/: group.rs  mod.rs  subgroup.rs
src/structs/notification/widgets/visual/: image.rs  mod.rs  progress.rs  text.rs
src/structs/notifier/: mod.rs
