[package]
name = "win32_notif"
version = "0.7.6"
edition = "2021"
description = "Wrapper around Windows UWP XAML (WinRT) Notification api"
license = "MIT"
repository = "https://github.com/AHQ-Softwares/win32_notif"
authors = [
  "AHQ Softwares (@AHQ-Softwares)",
  "A. Chakraborty (@ahqsoftwares) <ahqsecret@gmail.com>",
]

[package.metadata.docs.rs]
all-features = true
targets = [
  "x86_64-pc-windows-msvc",
  "i686-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
]

[dependencies]
windows = { version = "0.62", features = [
  "Win32_UI_Notifications",
  "Data_Xml_Dom",
  "UI_Notifications",
  "Foundation_Collections",
] }

[features]
default = []
# Enables unsafe functions
unsafe = []
