[package]
name = "win32_notif"
version = "0.9.1"
edition = "2021"
description = "Wrapper around Windows UWP XAML (WinRT) Notification api"
license = "MIT"
repository = "https://github.com/AHQ-Softwares/win32_notif"
authors = [
  "AHQ Softwares (@AHQ-Softwares)",
  "A. Chakraborty (@ahqsoftwares) <ahqsecret@gmail.com>",
]

[package.metadata.docs.rs]
all-features = true
targets = [
  "x86_64-pc-windows-msvc",
  "i686-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
]

[dependencies]
windows = { version = "0.62", features = [
  "UI_Notifications",
  "Win32_UI_Notifications",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com",
  "Data_Xml_Dom",
  "Globalization",
  "Foundation_Collections",
] }
windows-core = "0.62"

[features]
default = []
# Enables unsafe functions
unsafe = []
